objects/Product__c/fields/ATMFeesOtherCurrencies__c.field-meta.xml
<CustomField>
    <fullName>ATMFeesOtherCurrencies__c</fullName>
    <label>ATM Fees in Other Currencies</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>