objects/Product__c/fields/CardReplacementCost__c.field-meta.xml
<CustomField>
    <fullName>CardReplacementCost__c</fullName>
    <label>Card Replacement Cost</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>