objects/Product__c/fields/CostCalendarMonth__c.field-meta.xml
<CustomField>
    <fullName>CostCalendarMonth__c</fullName>
    <label>Cost per Calendar Month</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>